Change header text size and fix close icon squashed

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -21,7 +21,7 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
-  gap: 10px;
+  gap: 15px;
   padding: 20px;
 }
 
@@ -58,6 +58,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  min-width: 24px;
 }
 
 button {
@@ -82,4 +83,5 @@ button.cancel {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: large;
 }
